# thyme-sdk

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPROVEMENTS.md  fennel-feature-parity.md
examples/: user_features.py
examples/catalog_demo/: README.md  workspace.py
tests/: conftest.py  test_agent_codegen.py  test_agent_discover.py  test_agent_introspect.py  test_cli.py  test_cli_codegen.py  test_cli_query.py  test_cli_refs.py  test_client.py  test_client_integration.py  test_codegen_ir.py  test_codegen_python_emitter.py  test_codegen_types.py  test_commit_payload.py  test_compiler.py  test_config.py  test_connectors.py  test_dataset_decorator.py  test_duration.py  test_expectations.py  test_expr_builder.py  test_featureset.py  test_field_validation.py  test_integration.py  test_metadata.py  test_mock_context_filter_assign.py  test_pipeline.py  test_pipeline_filter_assign.py  test_pipeline_polars_udf.py  test_registry.py  test_result.py  test_schema_versioning.py  test_secret_and_env.py  test_testing_module.py  test_types.py
tests/fixtures/: sample_features.py
thyme/: __init__.py  cli.py  cli_refs.py  client.py  commit_payload.py  compiler.py  config.py  connectors.py  connectors_base.py  dataset.py  duration.py  env_defaults.py  expectations.py  featureset.py  metadata.py  pipeline.py  result.py  secret.py  types.py
thyme/agent/: __init__.py  codegen.py  introspect.py
thyme/codegen/: __init__.py  ir.py  python.py  types.py
thyme/expr/: __init__.py  _builder.py  _wire.py
thyme/testing/: __init__.py  (+4 more)
