[project]
name = "thyme-sdk"
version = "0.1.0"
description = "Python SDK for the Thyme streaming feature platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "protobuf>=5.27.0",
    "rich>=13.0",
    "anthropic>=0.40.0",
    "polars>=1.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
arrow = ["pyarrow>=15.0"]
all = ["pandas>=2.0", "pyarrow>=15.0"]

[project.scripts]
thyme = "thyme.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "duckdb>=0.10",
    "psycopg[binary]>=3.1",
    "ruff>=0.4.0",
    "grpcio-tools>=1.78.0",
]

[tool.uv]
package = true

[tool.ruff]
exclude = ["thyme/gen", ".claude"]

[tool.pytest.ini_options]
testpaths = ["tests"]
